--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -11,7 +11,9 @@
     <ListView
         android:id="@+id/listaObras"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="false"
+        android:focusable="false">
 
     </ListView>
 
